feat: Added decsription filter
